# SimpleCompiler

./: .gitignore  CMakeLists.txt  README.md
input/: test.txt
sample/:  enum2stringSupport.h  CMakeLists.txt  generation.cpp  generation.h  lexical.cpp  lexical.h  main.cpp  syntactic.cpp  syntactic.h  transform.cpp  transform.h
src/: CMakeLists.txt  codeGeneration.cpp  compilerStructure.cpp  lexicalAnalysis.cpp  main.cpp  syntacticAnalysis.cpp  transformation.cpp
src/include/: codeGeneration.h  compileStructure.h  lexicalAnalysis.h  syntacticAnalysis.h  transformation.h
